converting to .net 4.0 for mono support on travis

--- a/src/Wordpress.Xml.Rpc.Tests/App.config
+++ b/src/Wordpress.Xml.Rpc.Tests/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="WP_XML_RPC_BLOG_ID" value="1" />
-    <add key="WP_XML_RPC_URL" value="http://www.domain.com/xmlrpc.php" />
-    <add key="WP_XML_RPC_USERNAME" value="" />
-    <add key="WP_XML_RPC_PASSWORD" value="" />
+    <add key="WP_XML_RPC_BLOG_ID" value="1"/>
+    <add key="WP_XML_RPC_URL" value="http://www.domain.com/xmlrpc.php"/>
+    <add key="WP_XML_RPC_USERNAME" value=""/>
+    <add key="WP_XML_RPC_PASSWORD" value=""/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
