--- a/src/Wordpress.Xml.Rpc.Tests/App.config
+++ b/src/Wordpress.Xml.Rpc.Tests/App.config
@@ -6,4 +6,7 @@
     <add key="WP_XML_RPC_USERNAME" value=""/>
     <add key="WP_XML_RPC_PASSWORD" value=""/>
   </appSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+  </startup>
+</configuration>
