--- a/src/Wordpress.Xml.Rpc/Wordpress.Xml.Rpc.csproj
+++ b/src/Wordpress.Xml.Rpc/Wordpress.Xml.Rpc.csproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\GlobalAssemblyInfo.cs">
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Guard.cs" />
     <Compile Include="Posts\Post.cs" />
