--- a/src/Wordpress.Xml.Rpc/Wordpress.Xml.Rpc.csproj
+++ b/src/Wordpress.Xml.Rpc/Wordpress.Xml.Rpc.csproj
@@ -61,7 +61,9 @@
     </Compile>
     <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Guard.cs" />
+    <Compile Include="Posts\CustomField.cs" />
     <Compile Include="Posts\Post.cs" />
+    <Compile Include="Posts\Term.cs" />
     <Compile Include="Proxy\IWordpressProxy.cs" />
     <Compile Include="Posts\PostFilter.cs" />
     <Compile Include="Proxy\PostFilterProxy.cs" />
