Added parsing for post.post_thumbnail (needed for og tags)

--- a/src/Wordpress.Xml.Rpc/Wordpress.Xml.Rpc.csproj
+++ b/src/Wordpress.Xml.Rpc/Wordpress.Xml.Rpc.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Guard.cs" />
     <Compile Include="Posts\Author.cs" />
     <Compile Include="Posts\CustomField.cs" />
+    <Compile Include="Posts\MediaItem.cs" />
     <Compile Include="Posts\Post.cs" />
     <Compile Include="Posts\Term.cs" />
     <Compile Include="Proxy\IWordpressProxy.cs" />
